<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/document_list_default"
    tools:context="com.ntxdev.zuptecnico.ProfileActivity">

    <ImageView
        android:id="@+id/pickmap_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/report_list_item_padding"
        android:layout_marginTop="@dimen/report_list_item_padding"
        android:src="@drawable/userpage_avatar_default" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/pickmap_pin"
        android:layout_marginLeft="@dimen/report_list_item_padding"
        android:layout_marginTop="@dimen/activity_logout_button_margin"
        android:layout_toRightOf="@+id/pickmap_pin"
        android:textColor="@color/report_item_text_default"
        android:textSize="@dimen/report_card_title_text_size"
        android:layout_toLeftOf="@+id/logoff_button" />

    <Button
        android:id="@id/logoff_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/profile_name"
        android:layout_marginRight="@dimen/report_card_padding_item_left"
        android:onClick="logout"
        android:text="@string/logout_text" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_alignParentBottom="false"
        android:layout_below="@+id/pickmap_pin"
        android:layout_marginTop="@dimen/report_list_item_padding"
        android:background="@color/tab_pressed"
        android:clickable="false" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/frameLayout"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/report_list_item_padding"
                    android:layout_marginTop="@dimen/activity_logout_button_margin"
                    android:text="@string/register_title"
                    android:textAllCaps="true"
                    android:textColor="@color/offline_warning_text"
                    android:textSize="@dimen/report_card_padding_item_left"
                    android:textStyle="bold" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/double_divider_height"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="@dimen/report_card_padding_item_left"
                    android:layout_marginRight="@dimen/report_card_padding_item_left"
                    android:layout_marginTop="@dimen/double_divider_height"
                    android:background="@color/comment_item_subtext" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/report_list_item_padding"
                    android:layout_marginTop="@dimen/report_list_item_padding"
                    android:text="@string/username_title"
                    android:textAllCaps="true"
                    android:textColor="@color/offline_warning_text"
                    android:textSize="@dimen/report_card_padding_item_left" />

                <TextView
                    android:id="@+id/txt_profile_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/report_list_item_padding"
                    android:layout_marginLeft="@dimen/report_list_item_padding"
                    android:textColor="@color/report_item_text_default"
                    android:textSize="@dimen/report_list_item_title" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:layout_marginLeft="@dimen/report_card_padding_item_left"
                    android:layout_marginRight="@dimen/report_card_padding_item_left"
                    android:background="@color/tab_pressed" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/report_list_item_padding"
                    android:layout_marginTop="@dimen/report_list_item_padding"
                    android:text="@string/email_title"
                    android:textAllCaps="true"
                    android:textColor="@color/offline_warning_text"
                    android:textSize="@dimen/report_card_padding_item_left" />

                <TextView
                    android:id="@+id/txt_profile_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/report_list_item_padding"
                    android:layout_marginLeft="@dimen/report_list_item_padding"
                    android:textColor="@color/report_item_text_default"
                    android:textSize="@dimen/report_list_item_title" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:layout_alignParentBottom="false"
                    android:layout_marginLeft="@dimen/report_card_padding_item_left"
                    android:layout_marginRight="@dimen/report_card_padding_item_left"
                    android:background="@color/tab_pressed" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/report_list_item_padding"
                    android:layout_marginTop="@dimen/report_list_item_padding"
                    android:text="@string/group_title"
                    android:textAllCaps="true"
                    android:textColor="@color/offline_warning_text"
                    android:textSize="@dimen/report_card_padding_item_left" />

                <TextView
                    android:id="@+id/txt_profile_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/report_list_item_padding"
                    android:layout_marginLeft="@dimen/report_list_item_padding"
                    android:textColor="@color/report_item_text_default"
                    android:textSize="@dimen/report_list_item_title" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:layout_marginLeft="@dimen/report_card_padding_item_left"
                    android:layout_marginRight="@dimen/report_card_padding_item_left"
                    android:background="@color/tab_pressed" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/report_list_item_padding"
                    android:layout_marginTop="@dimen/report_list_item_padding"
                    android:text="@string/responsable_coordinator_title"
                    android:textAllCaps="true"
                    android:textColor="@color/offline_warning_text"
                    android:textSize="@dimen/report_card_padding_item_left" />

                <TextView
                    android:id="@+id/txt_profile_coordinator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/report_list_item_padding"
                    android:layout_marginLeft="@dimen/report_list_item_padding"
                    android:textColor="@color/report_item_text_default"
                    android:textSize="@dimen/report_list_item_title" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:layout_marginLeft="@dimen/report_card_padding_item_left"
                    android:layout_marginRight="@dimen/report_card_padding_item_left"
                    android:background="@color/tab_pressed" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
